--- a/style.css
+++ b/style.css
@@ -3,17 +3,32 @@
     font-family: Arial, Helvetica, sans-serif;
 background-color: lightcoral;
 font-size: 20px;
+box-sizing: border-box;
  }
 
  .title {
     font-weight: bold;
     color: black;
+    background-color: aqua;
     text-align: center;
-    font-size: 40px;
+    font-size: 55px;
+    border: 5px black solid;
+    width: 450px;
+    height: 70px;
+    padding: 5px 10px;
+    margin: auto;
  }
 
- .list {
-    list-style: lower-alpha;
-    color: black;
-
- }
+li {
+    list-style: disc;
+    background-color: aqua;
+    text-align: center;
+    font-size: 35px;
+    border: 2px black solid;
+    width: 450px;
+    height: 70px;
+    padding: 5px 10px;
+    margin-left: 255px;
+    margin-top: 2px;
+    color: black
+ } 
